fixed horizontal scroll

--- a/src/styles/blocks/action.scss
+++ b/src/styles/blocks/action.scss
@@ -9,7 +9,6 @@
       display: block;
       height: 1px;
       background-color: $main-color-title;
-      margin-top: 200px;
     }
 
     &--left {
