--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 
   @include onDesktop {
     @include pageGrid;
     grid-template-rows: 170px 1fr;
+    margin-bottom: 200px;
   }
 
   &__top {
@@ -43,10 +44,8 @@
   }
 
   &__content {
-    @include onTablet {
-      max-width: 480px;
-      margin-inline: auto;
-    }
+    max-width: 480px;
+    margin-inline: auto;
 
     @include onDesktop {
       grid-column: 2 / 7;
@@ -100,6 +99,7 @@
   &__button {
     @include contentPaddingInline;
     text-decoration: none;
+    // margin-inline: auto;
 
     &--desktop {
       margin-bottom: 50px;
