--- a/src/styles/blocks/ingredients.scss
+++ b/src/styles/blocks/ingredients.scss
@@ -1,5 +1,6 @@
 .ingredients {
   padding-inline: 0;
+  overflow: hidden;
 
   @include onTablet {
     display: flex;
