--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,4 @@
-$tablet-min-width: 576px;
+$tablet-min-width: 630px;
 $desktop-min-width: 1024px;
 
 $effectDuration: 0.3s;
